Création du bundle GroupBundle. Liste des groupes créé.

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -6,3 +6,6 @@ container_menu:
 top_bar:
   my_account:           Mon compte
   logout:               Déconnexion
+  
+network:
+  mygroups:             Mes groupes
