--- a/app/Resources/translations/groups.fr.yml
+++ b/app/Resources/translations/groups.fr.yml
@@ -1,3 +1,6 @@
 
 nogroups:
   sentence:                     Vous n'avez créé aucun groupe.
+  
+havegroups:
+  sentence:                     Vous administrez les groupes suivants:
