Procédure de mise a jour d'un groupe.

--- a/app/Resources/translations/flash.fr.yml
+++ b/app/Resources/translations/flash.fr.yml
@@ -13,3 +13,6 @@ group:
   create:
     success:      Le groupe a été créé avec succés
     failure:      Un erreur est survenue lors de la création du groupe
+  update:
+    success:      La mise a jour a été un succés
+    failure:      Une erreur est survenue lors de la mise a jour du groupe
