Procédure d'ajout d'un élément en favoris.

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -1,3 +1,7 @@
 
 noelements:
   sentence:             Aucun element a afficher
+  
+element:
+  favorite:
+    add:                Ajouter aux favoris
