Consultation des favoris d'un utilisateur.

--- a/app/Resources/translations/network.fr.yml
+++ b/app/Resources/translations/network.fr.yml
@@ -14,3 +14,4 @@ followed_by:          Vous êtes suivis par
 
 favorites:
   your_favorites:     Vos favoris
+  user_favorites:     Favoris de %name%
