--- a/app/Resources/translations/users.fr.yml
+++ b/app/Resources/translations/users.fr.yml
@@ -2,3 +2,4 @@
 user:
   follow:                       Suivre
   notfollow:                    Ne plus suivre
+  view_favorites:               Voir les favoris
