Ajout du formulaire d'ajout d'élément sur une page de groupe.

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -5,3 +5,6 @@ noelements:
 element:
   favorite:
     add:                Ajouter a mes favoris
+  add:
+    group:
+      will_be_in:       L'élément sera ajouté dans le groupe
