--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -10,3 +10,7 @@ error:
   group:
     name:
       unique:            Ce nom est déjà utilisé pour un autre groupe
+  registration:
+    username:
+      min:               Votre nom d'utilisateur doit contenir au moins %limit% caractères 
+      max:               Votre nom d'utilisateur doit contenir au maximum %limit% caractères 
