--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -17,5 +17,10 @@ registration:
 login:
   display:              J'ai déjà un compte
   
+home:
+  add_element:          Ajouter un élément
+  add_element_box:
+    close:              Fermer
+  
 title:
   hello:                Découvrez et partagez la musique !
