Javascript pour afficher/cacher le lecteur embed.

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -9,3 +9,6 @@ element:
   add:
     group:
       will_be_in:       L'élément sera ajouté dans le groupe
+  show:
+    close_embed:        Cacher le lecteur
+    open_embed:         Afficher le lecteur
