--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -42,3 +42,6 @@ element_add:
               que vous souhaitez partager.
   name:
     name:     Nom
+    
+tags_filter:
+  help:       Pour ne pas filtrer avec des tags, supprimez les tous de la liste.
