Evolution #65: Info en intro + pages statiques d'info

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -24,3 +24,8 @@ home:
   
 title:
   hello:                Découvrez et partagez la musique !
+  
+  
+bottom_menu:
+  about:                A propos
+  development:          Version en développement
