Ajout de deux bouton: aucun tags, mes tags

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -33,6 +33,8 @@ tags:
 filter:
   network: "Résultats de "
   submit:  Filtrer
+  clear:   Aucun filtre
+  mytags:  Tous mes tags
   
 element_add:
   url:
