Evolution #76: Afficher le login de la personne connecté

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -5,7 +5,7 @@ container_menu:
   my_favorites:         Mes favoris
   
 top_bar:
-  my_account:           Mon compte
+  my_account:           Mon compte (%name%)
   logout:               Déconnexion
   
 network:
