Evolution #90: Ajaxsification des actions More

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -22,3 +22,8 @@ element:
     who:                (envoyé par <a href="%owner_url%">%owner_name%</a>)
     whoandgroup:        (envoyé par <a href="%owner_url%">%owner_name%</a> dans le groupe <a href="%group_url%">%group_name%</a>)
   link:                 Ouvrir la page d'origine
+  
+elements:
+  ajax:
+    more:
+      noelements:       Pas d'autres éléments
