Evolution #90: Ajaxsification des actions Filtre

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -3,9 +3,9 @@ noelements:
   sentence:             Aucun élément a afficher
   sentence_filter:      |
                          Aucun élément a afficher, ceci est peut-être du a un
-                         filtre trop restrictif.
-                         <a class="filter_clear_url" href="#" >%link_string%</a> ?
-  sentence_filter_link_string: Vider le filtre
+                         filtre trop restrictif.<br />Vous pouvez ajouter des tags ou
+                         <a class="filter_clear_url" href="#" >%link_string%</a>.
+  sentence_filter_link_string: les retirer
   
 element:
   favorite:
