Evolution #89: Modifier / Supprimer ses éléments En cours: Mise en place de la procédure ajax (jsute chargement). Reste a adapter le code js de promptajax pour être chargé dans l'ajax.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -46,6 +46,12 @@ element_add:
               que vous souhaitez partager.
   name:
     name:     Nom
+  
+element_edit:
+  url:
+    name:     Lien
+  name:
+    name:     Nom
     
 tags_filter:
   help:       Pour ne pas filtrer avec des tags, supprimez les tous de la liste.
