Evolution #89: Modifier / Supprimer ses éléments Suppression

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -24,6 +24,8 @@ element:
   link:                 Ouvrir la page d'origine
   edit:
     link:               Modifier
+  remove:
+    link:               Supprimer
   
 elements:
   ajax:
