Modification element en ajax: bouton annuler.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -54,6 +54,8 @@ element_edit:
     name:     Nom
   submit:
     value:    Mettre à jour
+  cancel:
+    value:    Annuler
     
 tags_filter:
   help:       Pour ne pas filtrer avec des tags, supprimez les tous de la liste.
