--- a/app/Resources/translations/groups.fr.yml
+++ b/app/Resources/translations/groups.fr.yml
@@ -9,3 +9,5 @@ group:
   edit:                         Modifier ce groupe
   follow:                       Suivre
   notfollow:                    Ne plus suivre
+  remove:
+    link:                       Supprimer le groupe
