Evolution #88: Annoncé tout les sites supportés

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -42,3 +42,4 @@ title:
 bottom_menu:
   about:                A propos
   development:          Version en développement
+  sites:                Sites supportés
