--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -19,8 +19,8 @@ element:
     open_embed:         Afficher le lecteur
     open_link:          Ouvrir la page
   name:
-    who:                (envoyé par <a href="%owner_url%">%owner_name%</a>)
-    whoandgroup:        (envoyé par <a href="%owner_url%">%owner_name%</a> dans le groupe <a href="%group_url%">%group_name%</a>)
+    who:                envoyé par <a href="%owner_url%">%owner_name%</a>
+    whoandgroup:        envoyé par <a href="%owner_url%">%owner_name%</a> dans le groupe <a href="%group_url%">%group_name%</a>
   link:                 Ouvrir la page d'origine
   edit:
     link:               Modifier
