Evolution #92: Refonte des boutons: Refonte des boutons réseau public / mon réseau

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -37,6 +37,8 @@ filter:
   submit:  Filtrer
   clear:   Aucun filtre
   mytags:  Tous mes tags
+  network_all:   Réseau global
+  network_my:    Mon réseau
   
 element_add:
   url:
