Evolution #90: Ajaxsification des actions: Suivre/ne plus suivre

--- a/app/Resources/translations/users.fr.yml
+++ b/app/Resources/translations/users.fr.yml
@@ -1,5 +1,9 @@
 
 user:
   follow:                       Suivre
+  following:                    Suivi
   notfollow:                    Ne plus suivre
   view_favorites:               Voir les favoris
+  stop_follow:                  Ne plus suivre
+  show:
+    title:                      Diffusions de %name%
