Evolution #90: suivre/ne plus suivre pour groupes

--- a/app/Resources/translations/groups.fr.yml
+++ b/app/Resources/translations/groups.fr.yml
@@ -8,6 +8,7 @@ havegroups:
 group:
   edit:                         Modifier ce groupe
   follow:                       Suivre
+  following:                    Suivi
   notfollow:                    Ne plus suivre
   remove:
     link:                       Supprimer le groupe
