Ajout de la fonctionnalité "ajouter un tag".  - Transparence pour l'utilisateur  - Modification de l'entité Tag (ajout de deux champs)

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -31,6 +31,9 @@ tags:
            la liste.
   inputtext:
     help:      Saisissez vos tags ici (un par un)
+  search:
+    message_found:  "Tags correspondant à \"%string%\":"
+    display_more:   Afficher les autres résultats
            
 filter:
   network: "Résultats de "
