--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -36,9 +36,10 @@ element:
     add_cancel:         Annuler
     edit_submit:        Envoyer
     edit_cancel:        Annuler
-    add_error:
+    errors:
       min:              Le commentaire doit être de %limit% caractéres minimum
       max:              Le commentaire doit être de %limit% caractéres maximum
+      unknow:           Une erreur est survenue
   
 comment:
   edit:
