Evolution #145: Tags d'élément
Ajout de la possibilité d'ajouter le tag au favoris

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -30,6 +30,13 @@ element:
       sentence:         Vraiment supprimer ?
       yes:              Oui
       no:               Non
+  tag:
+    addtofav:
+      title:            Ajouter a vos tags favoris
+      confirm:
+        sentence:       Ajouter aux favoris ?
+        yes:            Oui
+        no:             Non
   comments: 
     add:                Ajouter un commentaire
     thereis:            Afficher le commentaire
