Evolution #107: Evolution ergonomiques
Proposition de diffuser l'élément ajouté dans un groupe si un de ses tags correspond
a un des groupe administré par l'utilisateur.

--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -64,6 +64,14 @@ element_add:
               que vous souhaitez partager.
   name:
     name:     Nom
+    
+  added_to_group:
+    sentence:       |
+                     L'élément que vous venez d'ajouter semble correspondre
+                     a un des groupes que vous gérez. Cliquez sur le nom d'un groupe
+                     pour diffuser cet élément dans le groupe.
+                     
+    nothanks:       Non, ne pas diffuser cet élément dans un de mes groupes
   
 element_edit:
   url:
