--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -19,6 +19,16 @@ my_account:
   favorite_tags:    Vos tags préférés
   change_password:  Changer mon mot de passe
   change_email:     Changer mon adresse email
+  address:
+    title:          Mon adresse
+    description:    Avec votre adresse Muzi.ch pourra vous avertir plus aisément des événements à venirs dans votre région.
+    form:
+      ilivenear:    J'habite vers
+      in:           en
+      submit:       Mettre a jour
+      errors:
+        notown:     Veuillez saisir la ville
+        nocountry:  Veuillez saisir le pays
   
 connexion:
   password_lost:    Mot de passe perdu ?
