--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -51,6 +51,8 @@ element:
       min:              Le commentaire doit être de %limit% caractéres minimum
       max:              Le commentaire doit être de %limit% caractéres maximum
       unknow:           Une erreur est survenue
+  vote:
+    good:               Ce partage mérite un point supplémentaire (cliquez a nouveau pour enlever)
   
 comment:
   edit:
